[gd_scene load_steps=11 format=3 uid="uid://vwbatgofwwki"]

[ext_resource type="Script" uid="uid://nj0uhvalov6w" path="res://source/door.gd" id="1_hpvv5"]
[ext_resource type="PackedScene" uid="uid://85dptkfgl63" path="res://scenes/barricade.tscn" id="2_18pbm"]
[ext_resource type="Texture2D" uid="uid://bxwnwa4p6nl0u" path="res://assets/sprites/level_sprites.png" id="3_83dcw"]
[ext_resource type="Material" uid="uid://0dboy0o7odrr" path="res://source/shader/outline_material.tres" id="4_la1wf"]
[ext_resource type="PackedScene" uid="uid://uwoeisn62r5h" path="res://scenes/player_detection_area_2d.tscn" id="5_18pbm"]
[ext_resource type="PackedScene" uid="uid://xqpi82yby68t" path="res://scenes/interaction_text.tscn" id="6_q5w8r"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_la1wf"]
load_path = "res://.godot/imported/door.png-3ee73939605461ff1e6ac88070535c2f.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_18pbm"]
atlas = ExtResource("3_83dcw")
region = Rect2(416, 96, 32, 64)

[sub_resource type="CircleShape2D" id="CircleShape2D_18pbm"]
radius = 100.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_83dcw"]
size = Vector2(52, 57)

[node name="Door" type="StaticBody2D"]
script = ExtResource("1_hpvv5")
barricade_scene = ExtResource("2_18pbm")
closed_texture = SubResource("CompressedTexture2D_la1wf")
open_texture = SubResource("AtlasTexture_18pbm")
outline_material = ExtResource("4_la1wf")
interaction_scale_factor = 1.2

[node name="PlayerDetectionArea2D" parent="." instance=ExtResource("5_18pbm")]

[node name="CollisionShape2D" parent="PlayerDetectionArea2D" index="0"]
shape = SubResource("CircleShape2D_18pbm")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("CompressedTexture2D_la1wf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_83dcw")
debug_color = Color(0.6733987, 0.30689642, 1, 0.41960785)

[node name="InteractionText" parent="." instance=ExtResource("6_q5w8r")]
visible = false
offset_top = 101.0
offset_bottom = 101.0

[connection signal="player_entered" from="PlayerDetectionArea2D" to="." method="_on_player_detection_area_2d_player_entered"]
[connection signal="player_exited" from="PlayerDetectionArea2D" to="." method="_on_player_detection_area_2d_player_exited"]

[editable path="PlayerDetectionArea2D"]
